# Text_Classification_Transformers_and_Classic

./: .gitignore  README.md  Text_Classification_Transformers_and_Classic.ipynb  pyproject.toml
finetuned_model/: config.json  merges.txt  metrics.json  tokenizer.json  tokenizer_config.json  vocab.json
